making some design changes

--- a/Mufashe/contact.html
+++ b/Mufashe/contact.html
@@ -187,7 +187,7 @@
             <div class="offices-grid">
                 <div class="office-card">
                     <div class="office-image">
-                        <img src="images/kigali-office.jpg" alt="Kigali office" loading="lazy">
+                        <img src="https://assets.micontenthub.com/traveloffers/travel-tips/kigali-city__swZ2yBuQ.jpg" alt="Kigali office" loading="lazy">
                     </div>
                     <div class="office-content">
                         <h3>Kigali Headquarters</h3>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="office-card">
                     <div class="office-image">
-                        <img src="images/musanze-office.jpg" alt="Musanze office" loading="lazy">
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/dc/3a/eb/mountain-gorilla-naming.jpg?w=1200&h=700&s=1" alt="Musanze office" loading="lazy">
                     </div>
                     <div class="office-content">
                         <h3>Northern Province</h3>
@@ -213,7 +213,7 @@
                 </div>
                 <div class="office-card">
                     <div class="office-image">
-                        <img src="images/huye-office.jpg" alt="Huye office" loading="lazy">
+                        <img src="https://live.staticflickr.com/8118/8967685182_3bb6b34887_b.jpg" alt="Huye office" loading="lazy">
                     </div>
                     <div class="office-content">
                         <h3>Southern Province</h3>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="office-card">
                     <div class="office-image">
-                        <img src="images/rubavu-office.jpg" alt="Rubavu office" loading="lazy">
+                        <img src="https://www.newtimes.co.rw/thenewtimes/uploads/images/2024/12/27/thumbs/1200x700/67354.jpg" alt="Rubavu office" loading="lazy">
                     </div>
                     <div class="office-content">
                         <h3>Western Province</h3>
@@ -281,26 +281,12 @@
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                </div>
-                <div class="app-download">
-                    <button class="app-store">
-                        <i class="fab fa-apple"></i> App Store
-                    </button>
-                    <button class="play-store">
-                        <i class="fab fa-google-play"></i> Play Store
-                    </button>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Mufashe Initiative. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Sitemap</a>
-            </div>
         </div>
     </footer>
 
