--- a/Mufashe/stories.html
+++ b/Mufashe/stories.html
@@ -60,7 +60,7 @@
             <div class="stories-grid">
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/story1.png" alt="Mary's story" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Mary's story" loading="lazy">
                         <div class="story-badge">Most Read</div>
                     </div>
                     <div class="story-content">
@@ -83,7 +83,7 @@
                 </article>
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/story2.png" alt="Claire's story" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Claire's story" loading="lazy">
                     </div>
                     <div class="story-content">
                         <div class="story-meta">
@@ -105,7 +105,7 @@
                 </article>
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/story3.png" alt="Annette's story" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" loading="lazy">
                         <div class="story-badge">New</div>
                     </div>
                     <div class="story-content">
@@ -331,26 +331,12 @@
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                </div>
-                <div class="app-download">
-                    <button class="app-store">
-                        <i class="fab fa-apple"></i> App Store
-                    </button>
-                    <button class="play-store">
-                        <i class="fab fa-google-play"></i> Play Store
-                    </button>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Mufashe Initiative. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Sitemap</a>
-            </div>
         </div>
     </footer>
 
