--- a/Mufashe/index.html
+++ b/Mufashe/index.html
@@ -93,7 +93,7 @@
             <div class="stories-grid">
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/woman.png" alt="Claire Mugeni" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Claire Mugeni" loading="lazy">
                         <div class="story-overlay"></div>
                     </div>
                     <div class="story-content">
@@ -107,7 +107,7 @@
                 </article>
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/woman2.png" alt="Grace Uwase" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Grace Uwase" loading="lazy">
                         <div class="story-overlay"></div>
                     </div>
                     <div class="story-content">
@@ -121,7 +121,7 @@
                 </article>
                 <article class="story-card">
                     <div class="story-image">
-                        <img src="images/woman3.png" alt="Annette Mukandoli" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Annette Mukandoli" loading="lazy">
                         <div class="story-overlay"></div>
                     </div>
                     <div class="story-content">
@@ -249,26 +249,12 @@
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                </div>
-                <div class="app-download">
-                    <button class="app-store">
-                        <i class="fab fa-apple"></i> App Store
-                    </button>
-                    <button class="play-store">
-                        <i class="fab fa-google-play"></i> Play Store
-                    </button>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Mufashe Initiative. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Sitemap</a>
-            </div>
         </div>
     </footer>
 
