--- a/Mufashe/mentorship.html
+++ b/Mufashe/mentorship.html
@@ -106,7 +106,7 @@
             <div class="mentors-grid">
                 <article class="mentor-card">
                     <div class="mentor-image">
-                        <img src="images/mentor1.png" alt="Amina mentor" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Amina mentor" loading="lazy">
                         <div class="mentor-overlay">
                             <div class="mentor-social">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -139,7 +139,7 @@
                 </article>
                 <article class="mentor-card">
                     <div class="mentor-image">
-                        <img src="images/mentor2.png" alt="Claire mentor" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Claire mentor" loading="lazy">
                         <div class="mentor-overlay">
                             <div class="mentor-social">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -172,7 +172,7 @@
                 </article>
                 <article class="mentor-card">
                     <div class="mentor-image">
-                        <img src="images/mentor3.png" alt="Grace mentor" loading="lazy">
+                        <img src="https://logowik.com/content/uploads/images/woman4906.jpg" alt="Grace mentor" loading="lazy">
                         <div class="mentor-overlay">
                             <div class="mentor-social">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -332,26 +332,12 @@
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                </div>
-                <div class="app-download">
-                    <button class="app-store">
-                        <i class="fab fa-apple"></i> App Store
-                    </button>
-                    <button class="play-store">
-                        <i class="fab fa-google-play"></i> Play Store
-                    </button>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Mufashe Initiative. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Sitemap</a>
-            </div>
         </div>
     </footer>
 
