--- a/Mufashe/register.html
+++ b/Mufashe/register.html
@@ -111,7 +111,7 @@
             </div>
             
             <div class="auth-image">
-                <img src="images/auth-image.png" alt="Community support">
+                <img src="https://img.freepik.com/free-photo/close-up-team-hand-shake_23-2148905520.jpg" alt="Community support">
                 <div class="auth-quote">
                     <p>"Mufashe gave me the confidence to pursue my education as a young mother."</p>
                     <footer>- Marie, Kigali</footer>
@@ -154,18 +154,12 @@
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Mufashe Initiative. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Sitemap</a>
-            </div>
         </div>
     </footer>
 
