--- a/Mufashe/index.html
+++ b/Mufashe/index.html
@@ -65,7 +65,7 @@
                     <div class="stat-icon">
                         <i class="fas fa-users"></i>
                     </div>
-                    <h3 data-count="2000">0+</h3>
+                    <h3 data-count="120">0+</h3>
                     <p>Young mothers supported annually</p>
                 </div>
                 <div class="stat-item">
@@ -79,7 +79,7 @@
                     <div class="stat-icon">
                         <i class="fas fa-chalkboard-teacher"></i>
                     </div>
-                    <h3 data-count="50">0+</h3>
+                    <h3 data-count="4">0+</h3>
                     <p>Trained mentors across Rwanda</p>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><i class="fas fa-share"></i> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
                     </div>
                 </article>
                 <article class="story-card">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><i class="fas fa-share"></i> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
                     </div>
                 </article>
                 <article class="story-card">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><i class="fas fa-share"></i> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
                     </div>
                 </article>
             </div>
