add new featutes and connecting login to dashboard

--- a/Mufashe/index.html
+++ b/Mufashe/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i> Share</a></button>
                     </div>
                 </article>
                 <article class="story-card">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i>Share</a></button>
                     </div>
                 </article>
                 <article class="story-card">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="story-social">
                         <button class="story-like"><i class="far fa-heart"></i> Like</button>
-                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i></a> Share</button>
+                        <button class="story-share"><a href="./contact.html"><i class="fas fa-share"></i>Share</a></button>
                     </div>
                 </article>
             </div>
