--- a/Mufashe/mental-health.html
+++ b/Mufashe/mental-health.html
@@ -141,7 +141,7 @@
                         <span><i class="fas fa-check"></i> Flexible scheduling</span>
                         <span><i class="fas fa-check"></i> 50 minutes per session</span>
                     </div>
-                    <a href="login.html" class="option-button">Book a Session <i class="fas fa-calendar-alt"></i></a>
+                    <a href="register.html" class="option-button">Book a Session <i class="fas fa-calendar-alt"></i></a>
                 </div>
                 <div class="option-card">
                     <div class="option-icon">
@@ -154,7 +154,7 @@
                         <span><i class="fas fa-check"></i> Moderated by professionals</span>
                         <span><i class="fas fa-check"></i> Safe environment</span>
                     </div>
-                    <a href="login.html" class="option-button">Join a Group <i class="fas fa-sign-in-alt"></i></a>
+                    <a href="register.html" class="option-button">Join a Group <i class="fas fa-sign-in-alt"></i></a>
                 </div>
                 <div class="option-card">
                     <div class="option-icon">
