--- a/Mufashe/register.html
+++ b/Mufashe/register.html
@@ -23,7 +23,7 @@
                 <li><a href="stories.html"><i class="fas fa-book-open"></i> STORIES</a></li>
                 <li><a href="resources.html"><i class="fas fa-book"></i> RESOURCES</a></li>
                 <li><a href="contact.html"><i class="fas fa-envelope"></i> CONTACT</a></li>
-                <li><a href="login.html" class="join-button"><i class="fas fa-sign-in-alt"></i> LOGIN</a></li>
+                <li><a href="login.html" class="join-button"><i class="fas fa-sign-in-alt"></i>SIGN IN</a></li>
             </ul>
             <div class="theme-toggle">
                 <button id="theme-switcher" aria-label="Toggle theme">
@@ -67,21 +67,8 @@
                     </div>
                     
                     <div class="form-group role-selection">
-                        <label>I am a:</label>
                         <div class="role-options">
                             <label class="role-option">
-                                <input type="radio" name="role" value="mentee" checked>
-                                <div class="role-card">
-                                    <i class="fas fa-user-graduate"></i>
-                                    <span>Young Mother</span>
-                                </div>
-                            </label>
-                            <label class="role-option">
-                                <input type="radio" name="role" value="mentor">
-                                <div class="role-card">
-                                    <i class="fas fa-user-tie"></i>
-                                    <span>Mentor</span>
-                                </div>
                             </label>
                         </div>
                     </div>
@@ -99,9 +86,6 @@
                 </div>
                 
                 <div class="social-login">
-                    <button class="social-button facebook">
-                        Continue with Facebook
-                    </button>
                     <button class="social-button google">
                         Continue with Google
                     </button>
