adding styles on mentor dashboards

--- a/Mufashe/stories.html
+++ b/Mufashe/stories.html
@@ -77,7 +77,7 @@
                                 <span><i class="far fa-comment"></i> 34</span>
                                 <span><i class="far fa-heart"></i> 256</span>
                             </div>
-                            <a href="stories/mary.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
+                            <a href="stories.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </article>
@@ -99,7 +99,7 @@
                                 <span><i class="far fa-comment"></i> 28</span>
                                 <span><i class="far fa-heart"></i> 198</span>
                             </div>
-                            <a href="stories/claire.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
+                            <a href="stories.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </article>
@@ -122,7 +122,7 @@
                                 <span><i class="far fa-comment"></i> 42</span>
                                 <span><i class="far fa-heart"></i> 312</span>
                             </div>
-                            <a href="stories/annette.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
+                            <a href="stories.html" class="read-story">Read Full Story <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </article>
@@ -137,7 +137,7 @@
                 <p>Find inspiration in stories that resonate with your current journey.</p>
             </div>
             <div class="categories-grid">
-                <a href="stories/education.html" class="category-card">
+                <a href="stories.html" class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
@@ -145,7 +145,7 @@
                     <p>Stories of young mothers who returned to school</p>
                     <div class="category-count">24 Stories</div>
                 </a>
-                <a href="stories/business.html" class="category-card">
+                <a href="stories.html" class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-business-time"></i>
                     </div>
@@ -153,7 +153,7 @@
                     <p>Building successful businesses as young moms</p>
                     <div class="category-count">18 Stories</div>
                 </a>
-                <a href="stories/mental-health.html" class="category-card">
+                <a href="stories.html" class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-brain"></i>
                     </div>
@@ -161,7 +161,7 @@
                     <p>Overcoming depression and finding hope</p>
                     <div class="category-count">15 Stories</div>
                 </a>
-                <a href="stories/community.html" class="category-card">
+                <a href="stories.html" class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-hands-helping"></i>
                     </div>
@@ -181,7 +181,7 @@
             <div class="videos-grid">
                 <article class="video-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/example1" title="Mary's education journey" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/JfbWbCBKeLY?modestbranding=1&showinfo=0&rel=0" title="Mary's education journey" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
                         <div class="play-button">
                             <i class="fas fa-play"></i>
                         </div>
@@ -189,14 +189,14 @@
                     <div class="video-content">
                         <h3>Mary's University Journey</h3>
                         <div class="video-meta">
-                            <span><i class="far fa-clock"></i> 4:32</span>
-                            <span><i class="far fa-eye"></i> 2.1K views</span>
+                            <span><i class="far fa-clock"></i> 1:09</span>
+                            <span><i class="far fa-eye"></i> 26 views</span>
                         </div>
                     </div>
                 </article>
                 <article class="video-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/example2" title="Claire's business success" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/3NGzNe8YuMo?modestbranding=1&showinfo=0&rel=0" title="Claire's business success" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
                         <div class="play-button">
                             <i class="fas fa-play"></i>
                         </div>
@@ -204,14 +204,14 @@
                     <div class="video-content">
                         <h3>Claire's Tailoring Business</h3>
                         <div class="video-meta">
-                            <span><i class="far fa-clock"></i> 6:15</span>
-                            <span><i class="far fa-eye"></i> 1.8K views</span>
+                            <span><i class="far fa-clock"></i> 8:12</span>
+                            <span><i class="far fa-eye"></i> 223 views</span>
                         </div>
                     </div>
                 </article>
                 <article class="video-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/example3" title="Support group testimonial" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/mF5t0dlHQKI?modestbranding=1&showinfo=0&rel=0" title="Support group testimonial" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
                         <div class="play-button">
                             <i class="fas fa-play"></i>
                         </div>
@@ -219,13 +219,13 @@
                     <div class="video-content">
                         <h3>Support Group Testimonials</h3>
                         <div class="video-meta">
-                            <span><i class="far fa-clock"></i> 8:42</span>
-                            <span><i class="far fa-eye"></i> 3.2K views</span>
+                            <span><i class="far fa-clock"></i> 1:23</span>
+                            <span><i class="far fa-eye"></i> 698 views</span>
                         </div>
                     </div>
                 </article>
             </div>
-            <a href="videos.html" class="view-all-videos">View More Videos <i class="fas fa-long-arrow-alt-right"></i></a>
+            <a href="https://www.youtube.com/" class="view-all-videos">View More Videos <i class="fas fa-long-arrow-alt-right"></i></a>
         </section>
 
         <section id="share" class="share-story">
