--- a/Mufashe/mental-health.html
+++ b/Mufashe/mental-health.html
@@ -119,7 +119,7 @@
                     </div>
                 </article>
             </div>
-            <a href="articles.html" class="view-all-articles">View All Articles <i class="fas fa-long-arrow-alt-right"></i></a>
+            <a href="stories.html" class="view-all-articles">View All Articles <i class="fas fa-long-arrow-alt-right"></i></a>
         </section>
 
         <section id="counseling" class="counseling-section">
@@ -183,7 +183,7 @@
                         <li><i class="fas fa-chart-bar"></i> Personalized results</li>
                         <li><i class="fas fa-hands-helping"></i> Resource recommendations</li>
                     </ul>
-                    <a href="assessment.html" class="assessment-button">Start Assessment <i class="fas fa-play"></i></a>
+                    <a href="resources.html" class="assessment-button">Start Assessment <i class="fas fa-play"></i></a>
                 </div>
                 <div class="assessment-image">
                     <img src="https://www.afro.who.int/sites/default/files/2020-10/For%20mental%20health%20PR.jpg" alt="Mental health assessment" loading="lazy">
