Done with implementation of everything

--- a/Mufashe/appointments.html
+++ b/Mufashe/appointments.html
@@ -32,7 +32,7 @@
             <div class="user-profile">
                 <img src="https://t3.ftcdn.net/jpg/06/19/26/46/360_F_619264680_x2PBdGLF54sFe7kTBtAvZnPyXgvaRw0Y.jpg" alt="Mentor Profile" class="profile-img">
                 <div class="profile-info">
-                    <h3>Dr. Alice Uwase</h3>
+                    <h3>Mr. Daniel</h3>
                     <p>Senior Mentor</p>
                 </div>
                 <button id="logout-btn" class="logout-btn"><i class="fas fa-sign-out-alt"></i></button>
@@ -232,5 +232,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/appointments.js"></script>
+    <script src="js/scriptdash.js"></script>
 </body>
 </html>
