--- a/Mufashe/reports.html
+++ b/Mufashe/reports.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.css">
-    <link rel="stylesheet" href="css/stylespages.css">
+    <link rel="stylesheet" href="css/stylesdash.css">
 </head>
 <body>
     <div class="dashboard-container">
@@ -32,7 +32,7 @@
             <div class="user-profile">
                 <img src="https://t3.ftcdn.net/jpg/06/19/26/46/360_F_619264680_x2PBdGLF54sFe7kTBtAvZnPyXgvaRw0Y.jpg" alt="Mentor Profile" class="profile-img">
                 <div class="profile-info">
-                    <h3>Dr. Alice Uwase</h3>
+                    <h3>Mr.Daniel</h3>
                     <p>Senior Mentor</p>
                 </div>
                 <button id="logout-btn" class="logout-btn"><i class="fas fa-sign-out-alt"></i></button>
@@ -367,5 +367,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <script src="js/reports.js"></script>
+    <script src="js/scriptdash.js"></script>
 </body>
 </html>
