finalising the UI and handling some errors

--- a/Mufashe/dashboard.html
+++ b/Mufashe/dashboard.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="0">    
     <title>Mufashe Initiative - Mentor Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,12 +17,12 @@
         <aside class="sidebar">
             <div class="logo-container">
                 <img src="https://t3.ftcdn.net/jpg/06/19/26/46/360_F_619264680_x2PBdGLF54sFe7kTBtAvZnPyXgvaRw0Y.jpg" alt="Mufashe Initiative Logo" class="logo">
-                <h1>Welcome</h1>
+                <h1>Dashboard</h1>
             </div>
             
             <nav class="main-nav">
                 <ul>
-                    <li class="active"><a href="#dashboard"><i class="fas fa-home"></i> Dashboard</a></li>
+                    <li class="active"><a href="#dashboard"><i class="fas fa-home"></i> Overview</a></li>
                     <li><a href="mentees.html"><i class="fas fa-users"></i> My Mentees</a></li>
                     <li><a href="dashresources.html"><i class="fas fa-book"></i> Resources</a></li>
                     <li><a href="messages.html"><i class="fas fa-envelope"></i> Messages</a></li>
@@ -31,7 +34,6 @@
             <div class="user-profile">
                 <img src="https://t3.ftcdn.net/jpg/06/19/26/46/360_F_619264680_x2PBdGLF54sFe7kTBtAvZnPyXgvaRw0Y.jpg" alt="Mentor Profile" class="profile-img">
                 <div class="profile-info">
-                    <h3>Mr. Daniel</h3>
                     <p>Senior Mentor</p>
                 </div>
                 <button id="logout-btn" class="logout-btn"><i class="fas fa-sign-out-alt"></i></button>
