--- a/Mufashe/login.html
+++ b/Mufashe/login.html
@@ -51,11 +51,7 @@
                 <li><a href="stories.html"><i class="fas fa-book-open"></i> STORIES</a></li>
                 <li><a href="resources.html"><i class="fas fa-book"></i> RESOURCES</a></li>
                 <li><a href="contact.html"><i class="fas fa-envelope"></i> CONTACT</a></li>
-                <li id="auth-item">
-                    <a href="login.html" id="login-link"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
-                    <a href="#" id="logout-link" onclick="logout()"><i class="fas fa-sign-out-alt"></i> LOGOUT</a>
-                </li>
-                <li><a href="register.html" class="join-button"><i class="fas fa-user-plus"></i> SIGN UP</a></li>
+                <li><a href="login.html" class="join-button"><i class="fas fa-user-plus"></i>SIGN UP</a></li>
             </ul>
             <div class="theme-toggle">
                 <button id="theme-switcher" aria-label="Toggle theme">
