Loging in using credentials saved

--- a/Mufashe/login.html
+++ b/Mufashe/login.html
@@ -50,7 +50,7 @@
                 <li><a href="mental-health.html"><i class="fas fa-brain"></i> MENTAL HEALTH</a></li>
                 <li><a href="stories.html"><i class="fas fa-book-open"></i> STORIES</a></li>
                 <li><a href="resources.html"><i class="fas fa-book"></i> RESOURCES</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> CONTACT</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i> CONTACTS</a></li>
                 <li><a href="login.html" class="join-button"><i class="fas fa-user-plus"></i>SIGN UP</a></li>
             </ul>
             <div class="theme-toggle">
