--- a/Mufashe/index.html
+++ b/Mufashe/index.html
@@ -97,7 +97,7 @@
                         <div class="story-overlay"></div>
                     </div>
                     <div class="story-content">
-                        <p>"I thought my life was over, but with Mufashe's support, I'm now a successful entrepreneur!"</p>
+                        <p>"I thought my life was over, but with Mufashe's support, I'm now a successful entrepreneur!!"</p>
                         <footer>#MUGENI Claire, Kigali</footer>
                     </div>
                     <div class="story-social">
