--- a/Mufashe/mentees.html
+++ b/Mufashe/mentees.html
@@ -22,7 +22,7 @@
             
             <nav class="main-nav">
                 <ul>
-                    <li><a href="dashboard.html"><i class="fas fa-home"></i> Overview</a></li>
+                    <li><a href="dashboard.html"><i class="fas fa-home"></i> Overviews</a></li>
                     <li class="active"><a href="mentees.html"><i class="fas fa-users"></i> My Mentees</a></li>
                     <li><a href="dashresources.html"><i class="fas fa-book"></i> Resources</a></li>
                     <li><a href="messages.html"><i class="fas fa-envelope"></i> Messages</a></li>
